# littlehive

./: .env.example  .gitignore  MANIFEST.in  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: defaults.yaml  instance.example.yaml  instance.yaml
docs/: architecture.md  onboarding.md  ops.md  prompts.md  pypi_release.md
scripts/: package_smoke.sh  release.sh
src/littlehive/: __init__.py  cli.py
src/littlehive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/littlehive/agent/: anticipation.py  config.py  constants.py  dynamic_context.py  local_cache.py  locks.py  logger_setup.py  parser.py  paths.py  queues.py  scheduled_jobs.py  scheduler.py  self_healing.py  slash_commands.py  start_agent.py  system_prompt.md  tool_registry.py  tool_router.py
src/littlehive/apps/: api_server.py  dashboard.py  diagnostics_cli.py  onboarding_cli.py  reset.py  run.py  runtime_support.py  short_cli.py  supervisor.py  telegram_worker.py
src/littlehive/channels/telegram/: __init__.py  adapter.py  auth.py  handlers.py
src/littlehive/core/admin/: __init__.py  schemas.py  service.py
src/littlehive/core/agents/: __init__.py  base.py  execution_agent.py  memory_agent.py  orchestrator_agent.py  planner_agent.py  reply_agent.py
src/littlehive/core/config/: benchmarks.py  defaults.py  hardware_audit.py  loader.py  onboarding.py  recommender.py  schema.py
src/littlehive/core/context/: __init__.py  (+5 more)
src/littlehive/dashboard/: app.js  index.html  server.py  style.css
src/littlehive/db/: models.py  session.py
src/littlehive/tools/: api_registry_tools.py  calendar_tools.py  email_tools.py  finance_tools.py  github_tools.py  google_auth.py  google_tasks.py  memory_tools.py  messaging_tools.py  reminder_tools.py  shell_governance.py  shell_tools.py  stakeholder_tools.py  task_queue.py  web_tools.py
tests/fixtures/: sample_configs.py
tests/integration/: test_admin_api.py  test_dashboard_and_compat.py  test_diagnostics_cli.py  test_dummy_task_pipeline.py  test_onboarding_and_diag.py  test_packaging_smoke.py  test_phase2_flow.py  test_phase3_diagnostics_cli.py  test_phase3_resilience.py  test_phase45_admin_api.py  test_phase45_dashboard_and_compat.py  test_pipeline_flow.py  test_resilience.py  test_telegram_pipeline.py  test_tool_reflexion.py
tests/longevity/: test_anti_bloat.py  test_phase2_anti_bloat.py
tests/unit/: test_arch_boundaries.py  test_builtin_utility_echo_tool.py  test_builtin_weather_tool.py  test_config_generation.py  test_config_loader.py  test_confirmation_flow.py  test_context_compiler.py  test_execution_hybrid_routing.py  test_execution_weather_fallback.py  test_hardware_audit.py  test_itr_find_tools.py  test_logging_trace.py  test_memory_cards_phase2.py  test_memory_retrieval.py  test_permissions_and_redaction.py  test_phase3_failure_fingerprint.py  test_phase3_provider_router_breaker.py  test_phase3_reflexion_policy.py  test_phase3_retry_and_breaker.py  test_phase45_confirmation_flow.py  test_phase45_permissions_and_redaction.py  test_phase45_tool_risk_gating.py  test_phase45_version.py  test_planner_routing_weather.py  test_provider_router_fallback.py  test_recommender.py  test_session_serialization.py  test_telegram_auth.py  test_tool_injection_policy.py  test_tool_retrieval_quality_metrics.py  test_tool_retry.py  test_tool_risk_gating.py  test_transfer_and_compiler.py  test_transfer_and_compiler_phase2.py
(+52 files in other folders)
