[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "littlehive"
version = "0.6.1"
description = "LittleHive local-first multi-agent assistant foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "LittleHive"}]
license = {text = "MIT"}
dependencies = [
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-api-python-client",
  "sentence-transformers",
  "scikit-learn",
  "mlx-lm",
  "apscheduler"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "build>=1.2",
  "twine>=5.1",
  "pytest>=8.0"
]

[project.scripts]
lhive = "littlehive.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["E402"]
