[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "littlehive"
version = "0.7.4"
description = "LittleHive local-first multi-agent assistant foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "LittleHive"}]
license = {text = "MIT"}
dependencies = [
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-api-python-client",
  "sentence-transformers",
  "scikit-learn",
  "mlx-lm",
  "apscheduler",
  "requests",
  "markdown",
  "fpdf2",
  "ddgs",
  "trafilatura",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "build>=1.2",
  "twine>=5.1",
  "pytest>=8.0"
]

[project.scripts]
lhive = "littlehive.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"littlehive.agent" = ["*.md", "prompts/*.md"]
"littlehive.dashboard" = ["*.html", "*.css", "*.js"]

[tool.ruff.lint]
ignore = ["E402"]
